# student-mentor-allocation-system

./: .bandit  .coveragerc  .env.dev  .env.example  .env.example.win  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.security  Dockerfile.test  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.md  README_CI.md  README_DEV.md  README_doctor.md  RUNBOOK.md  Start-App.ps1  Start_App.bat  Stop_App.bat  StudentMentorApp.spec  activate.bat  activate.sh  check_progress.py  constraints-dev.txt  constraints-win.txt  constraints.txt  coverage_server_check.rc  dev-verify-and-push.ps1  devserver.py  docker-compose.dev.yml  docker-compose.test.yml  gates.json  install_requirements.bat  (+31 more)
.ci/: constraints-dev.txt.sha256  constraints.txt.sha256
.codex/: auto_fix_prompt.md  dashboard_analysis_prompt.md  regression_prompt.md  risk_prediction_prompt.md  test_summary_prompt.md
.devcontainer/: devcontainer.json
.github/workflows/: api-hardening.yml  cache-management.yml  ci-min.yml  ci-nightly-perf.yml  ci-redis-tls.yml  ci-tests.yml  ci.yml  ci.yml.bak  deep-testing.yml  lint.yml  linux-tests.yml  python-setup.yml  quality-gates.yml  quality.yml  strict-ci.yml  test.yml  windows-launcher.yml  windows-smoke.yml
artifacts/: ci_warnings_report.json  readiness_report.csv  readiness_report.json  readiness_report.md  sync_report.csv  sync_report.json  sync_report.md
artifacts/reports/: check_progress.py.md  install_requirements.bat.md  quick_start.bat.md  run_application.bat.md
assets/fonts/: README.md
auth/: __init__.py  errors.py  ldap_adapter.py  metrics.py  models.py  oidc_adapter.py  saml_adapter.py  session_store.py  utils.py
automation_audit/: __init__.py  api.py  auth.py  ci_scan.py  cli.py  counter.py  debug.py  exporter.py  fs_atomic.py  idem.py  logging.py  metrics.py  normalize.py  ratelimit.py  retry.py  validation.py
automation_audit/providers/: academic_year.py  special_schools.py
ci/: pytest_summary_gate.py  run_full_tests.sh
config/: allocation_config.json  performance_thresholds.json
docs/: 100-score-checklist.md  DEVELOPER.md  ENDPOINTS.md  INSTALL.md  OPERATIONS.md  TESTING.md  UI_TESTING.md  USER_GUIDE.md  allocation_policy.md  api-hardening.md  architecture.md  ci_performance.md  ci_security_coverage.md  evidence_map.md  exporter.md  ops_metrics_map.md  phase1_status.md  testing-guide.md  timekeeping.md  windows-install.md  windows-onboarding-checklist.md  windows-powershell-setup.md
dr/: run.py
freezegun/: __init__.py
logs/: adaptive_latest.json
migrations/: 202407170001_create_api_keys_table.sql  202407250001_alter_api_keys_add_expiry.sql  alembic.ini  env.py  seed_api_keys.py
multipart/: __init__.py  multipart.py
observability/: __init__.py  metrics.py
ops/: __init__.py  audit_archiver.py  audit_review.py  cleanupd.py  retention_enforcer.py
repo_auditor_lite/: __init__.py  __main__.py  excel_safety.py  files.py  metrics.py  metrics_noop.py  middleware_check.py  retry.py
reports/: 5d_plus_report.txt  access_review.py  perf_baseline.json  perf_compare.json  pytest-summary.txt  selfheal-run.json  spec_matrix.md  strict_score.json
scripts/: __init__.py  adaptive_testing.py  bandit_fixer.py  build_win.bat  check_coverage.py  check_no_shadowing.py  check_no_weak_hashes.py  check_pytest_version.py  check_weak_hashes.py  ci_collect_perf_metrics.py  ci_no_pii_scan.py  ci_perf_regression_gate.py  ci_print_env.py  ci_pytest_summary_parser.py  coverage_gate.py  dashboard.py  dev.ps1  e2e_preflight.ps1  environment_doctor.py  fix_pytest_config.py  flush_state.py  generate_report.py  generate_test_report.py  guard_pythonpath.py  phase3_cli.py  post_migration_checks.py  pytest_json_gate.py  reality_map.py  register_autostart.ps1  rollback_changes.py  run_bandit_gate.py  run_tests.py  secure_utils.py  security_dashboard.py  security_tools.py  server_check.py  smoke.ps1  smoke.sh  validate_artifacts.py  verify_agents.py  (+2 more)
security/: audit_framework.py  compliance_checks.py  security_scanner.py  vault_integration.py
src/: _pytest_plugin_loader.py  pytest_asyncio.py
test-results/: evidence_map.json  junit.xml  performance-metrics.json  pytest-summary.json  report.html
tests/: __init__.py  conftest.py  factories.py  golden_utils.py  phase7_utils.py  pytest-min.ini  pytest.ini  requirements.txt  test_allocation_core.py  test_client.py  test_counter.py  test_engine_integration.py  test_exporter_golden.py  test_imports.py  test_logging_payloads.py  test_migrate_artifacts.py  test_normalization.py  test_normalization_branches.py  test_normalization_checksum.py  test_phase6_metrics_guard.py  test_phase6_middleware_order.py  test_phase6_no_relative_imports.py  test_retry.py  test_rules.py  test_security.py  test_smoke_e2e.py  test_strict_report.py  validate_structure.py
tests_live/: test_redis_retry_integration.py
tooling/: __init__.py  clock.py  domain.py  excel_export.py  logging_utils.py  metrics.py  retry.py
tools/: __init__.py  api_keys.py  bom_guard.py  check_logging_extras.py  ci_bootstrap.py  ci_pytest_runner.py  ci_test_orchestrator.py  excel_io.py  fetch_winsw.ps1  generate_winsw.py  gha_rerun.py  gha_workflow_patcher.py  healthcheck.py  logging_smoke.py  migrate_artifacts_v3_to_v4.py  migrate_shadowing.sh  mw_probe.py  phase1_audit.py  pytest_config_diagnostics.py  refactor_imports.py  repo_doctor.py  reqs_doctor.py  requirements-reqsdoctor.txt  rewrite_imports.py  run_tests.py  setup_ci.py  smoke_readyz.py  strict_score_core.py  strict_score_guard.py  strict_score_reporter.py  strip_bom.py  system_clock.py  uvicorn_entrypoint_guard.py
windows_launcher/: __init__.py  launcher.py
windows_service/: StudentMentorService.xml  StudentMentorService.xml.bak-14040724164413  StudentMentorService.xml.bak-14040724164946  StudentMentorService.xml.bak-14040724170045  __init__.py  controller.py  errors.py  install_service.ps1  normalization.py  readiness.py  readiness_cli.py  uninstall_service.ps1  winsw_xml.py
windows_shared/: Invoke-WindowsReadiness.ps1  __init__.py  config.py
(+1477 files in other folders)
