[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-mentor-allocation-system"
version = "0.0.0"
description = "Student Mentor Allocation System tooling and services."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"  # SPDX string — بدون هشدار
authors = [{name = "Reza", email = "ops@example.invalid"}]
keywords = ["education", "mentoring", "allocation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.8.0",
    "pydocstyle>=6.3.0",
    "pre-commit>=3.5.0",
]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "build>=1.0",
    "freezegun>=1.3.1",
]

# CI باید خودشکفا باشد؛ ابزارهای gate (ruff/mypy/pydocstyle) و pytest هم اینجاست
ci = [
    "redis>=5,<6",
    "prometheus-client>=0.20,<0.21",
    "tenacity>=8,<9",
    "pyyaml>=6,<7",
    "jinja2>=3,<4",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<0.24",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
    "pydocstyle>=6.3.0",
    "build>=1.0",
    "freezegun>=1.3.1",
    "SQLAlchemy>=2,<3",
    "pydantic>=2,<3",
    "orjson>=3.9,<4",
    "pydantic-settings>=2,<3",   # ⬅️ جدید: برای BaseSettings v2
    "fastapi>=0.110,<1.0",       # ⬅️ جدید: برای ci_orchestrator و APIها
    "psutil>=5.9,<6.0",
    "openpyxl>=3.1,<4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","B","C90","PL","RUF"]
ignore = ["E203"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D103"]

[tool.ruff.lint.pylint]
max-statements = 120

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = [
    "tools/bom_guard.py",
    "tools/strip_bom.py",
    "tests/ci/conftest.py",
    "tests/ci/test_bom_guard.py",
    "tests/ci/test_ruff_gate.py",
    "tests/ci/test_mypy_strict.py",
    "tests/ci/test_pydocstyle_gate.py",
]
enable_error_code = "ignore-without-code"
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.packaging.conftest"]
ignore_errors = false

[tool.pydocstyle]
convention = "pep257"
match = "(?!test_).*[.]py"
add-ignore = ["D104", "D203", "D213"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
strict_markers = true
strict_config = true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "-q",
    "--tb=short",
]
testpaths = ["tests", "test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as asyncio tests",
]
